# sdl-tutorials

./: .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_8txt.html  LICENSE  README.md  README_awesome.md  README_install.md  annotated.html  classSize-members.html  classSize.html  classes.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8cpp.html  my__lib_8cpp__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html  size_8cpp.html  size_8cpp__incl.dot  size_8hpp.html  size_8hpp__dep__incl.dot  size_8hpp_source.html
.github/workflows/: documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cc
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/my_lib/: CMakeLists.txt  size.cpp  size.hpp
tests/: CMakeLists.txt
tutorials/: CMakeLists.txt
tutorials/github/: CMakeLists.txt  README.md
tutorials/github/chess/: CMakeLists.txt  README.md
tutorials/github/chess/src/: main.cpp
tutorials/github/chess/src/game/: game.cpp  game.h  game_service.cpp  game_service.h  game_window.cpp  game_window.h
tutorials/github/chess/src/pieces/: piece.cpp  piece.h  piece_bishop.cpp  piece_bishop.h  piece_king.cpp  piece_king.h  piece_knight.cpp  piece_knight.h  piece_pawn.cpp  piece_pawn.h  piece_queen.cpp  piece_queen.h  piece_rook.cpp  piece_rook.h
tutorials/github/chess/src/utils/: enums.h  position.cpp  position.h  texture.cpp  texture.h
tutorials/github/game-of-life/: CMakeLists.txt
tutorials/github/game-of-life/src/: Game.cpp  Game.h
tutorials/github/hi-lo/: CMakeLists.txt  README.md
tutorials/github/hi-lo/src/: Assert.hpp  Button.cpp  Button.hpp  ButtonEventHandler.cpp  ButtonEventHandler.hpp  Card.hpp  CardView.cpp  CardView.hpp  Color.hpp  CreditsView.cpp  CreditsView.hpp  Display.cpp  Display.hpp  FixedTextSprite.cpp  FixedTextSprite.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  GameModel.cpp  GameModel.hpp  GamePauseDialog.cpp  GamePauseDialog.hpp  GameScene.cpp  GameScene.hpp  GameView.cpp  GameView.hpp  GameViewButton.cpp  GameViewButton.hpp  Grid.cpp  Grid.hpp  IMGSubsystem.cpp  IMGSubsystem.hpp  ImageLoading.cpp  ImageLoading.hpp  Main.cpp  MenuSceneView.cpp  MenuSceneView.hpp  Observer.hpp  Point.hpp  (+23 more)
tutorials/github/maze/: CMakeLists.txt  README.md
tutorials/github/maze/src/: Coordinate.cpp  Coordinate.h  Maze.cpp  Maze.h  MazeDoor.cpp  MazeDoor.h  MazeGuard.cpp  MazeGuard.h  MazeKey.cpp  MazeKey.h  MazeObject.cpp  MazeObject.h  MazeTrap.cpp  MazeTrap.h  Player.cpp  Player.h  Room.cpp  Room.h  main.cpp
tutorials/github/mine-sweeper/: CMakeLists.txt  README.md
tutorials/github/mine-sweeper/src/: main.c  model.c  model.h
tutorials/github/pong/: CMakeLists.txt  README.md
tutorials/github/pong/src/: aabb.cpp  aabb.h  ball.cpp  ball.h  center_line.cpp  center_line.h  court_scene.cpp  court_scene.h  endgame_scene.cpp  endgame_scene.h  game.cpp  game.h  goal.cpp  goal.h  main.cpp  paddle.cpp  paddle.h  scene.h  score_indicator.cpp  score_indicator.h  wall.cpp  wall.h  welcome_scene.cpp  welcome_scene.h
tutorials/github/snake/: CMakeLists.txt  Collideable.cpp  Collideable.hpp  Drawable.hpp  Food.cpp  Food.hpp  Screen.cpp  Screen.hpp  Section.cpp  Section.hpp  Snake.cpp  Snake.hpp  Wall.cpp  Wall.hpp  main.cpp
tutorials/github/sokoban/: CMakeLists.txt  README.md
tutorials/github/sokoban/src/: board.h  colors.h  consts.h  draw.cpp  draw.h  game.cpp  game.h  graphics.h  main.cpp  player.h
tutorials/github/wenova/: CMakeLists.txt  README.md
tutorials/github/wenova/include/: Animation.h  BattleEnd.h  BattleState.h  Blood.h  Camera.h  CharacterSelectState.h  Collision.h  Config.h  EditState.h  EditableFloor.h  Effect.h  Fighter.h  FighterMenu.h  FighterStats.h  Flesh.h  FleshUltimateEffect.h  Floor.h  Game.h  GameObject.h  HealEffect.h  InputManager.h  JoystickButton.h  JoystickConfigState.h  MenuState.h  Music.h  OptionsState.h  Rectangle.h  Resources.h  Sound.h  Sprite.h  StageSelectState.h  State.h  StateData.h  Text.h  TimeCounter.h  Timer.h  UltimateEffect.h  Vector.h
tutorials/github/wenova/src/: Animation.cpp  BattleEnd.cpp  BattleState.cpp  Blood.cpp  Camera.cpp  CharacterSelectState.cpp  Config.cpp  EditState.cpp  EditableFloor.cpp  Effect.cpp  Fighter.cpp  FighterMenu.cpp  FighterStats.cpp  Flesh.cpp  FleshUltimateEffect.cpp  Floor.cpp  Game.cpp  HealEffect.cpp  InputManager.cpp  JoystickButton.cpp  JoystickConfigState.cpp  Main.cpp  MenuState.cpp  Music.cpp  OptionsState.cpp  Rectangle.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageSelectStage.cpp  State.cpp  Text.cpp  TimeCounter.cpp  Timer.cpp  UltimateEffect.cpp  Vector.cpp
tutorials/lazyfoo/: CMakeLists.txt
tutorials/lazyfoo/hello_world/: CMakeLists.txt  main.cc
